/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Nicholas Viggiani
 */
package ucf.assignments;

import javafx.event.ActionEvent;

public class ItemController {
    public void addItemButtonClicked(ActionEvent actionEvent) {
        //The user will input the necessary data
        //After the data is set, the user will press the button
        //And the item will be added to the current list
    }

    public void itemDueDateSet(ActionEvent actionEvent) {
        //User will select a Due Date for the item
    }

    public void itemDescriptionSet(ActionEvent actionEvent) {
        //User will write a description of the item
    }

    public void isCompleteSet(ActionEvent actionEvent) {
        //User will describe whether the item has been complete or not
    }
}
