/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Nicholas Viggiani
 */
package ucf.assignments;

import java.util.ArrayList;

public class List {
    private ArrayList<ToDoList> lists;
    private ToDoList listTitle;

    public ArrayList<ToDoList> addList(ToDoList listTitle, ArrayList<ToDoList> lists){
        //User will input a title for the new list
        //User will click add button
        //New to-do-list is added
        return lists;
    }
    public ArrayList<ToDoList> removeList(ToDoList listTitle, ArrayList<ToDoList> lists){
        //user clicks on list to remove
        //user clicks remove button
        //list is removed
        return lists;
    }
}
