/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Nicholas Viggiani
 */
package ucf.assignments;

import javafx.event.ActionEvent;

public class ListController {
    public void addListButtonClick(ActionEvent actionEvent) {
        //User will input a title of a new to-do-list
        //to-do-list will be added to list of to-do-list lists
    }

    public void deleteListButtonClick(ActionEvent actionEvent) {
        //User will click name of to-do-list to be deleted
        //User will click delete button to remove to-do-list
    }

    public void displayListButtonClick(ActionEvent actionEvent) {
        //User will click on a title of a to-do-list
        //User will then click Show Items button to display Items in to-do-list
    }
}
