@startuml
'https://plantuml.com/class-diagram



class App {
+ main()
+ start()
}

class Lists{
-lists[] : ArrayList<ToDoList>
-listTitle : String
addList()
removeList()
}

class ToDoList {
- toDoTitle : String
- items[] : ArrayList<Item>
setTitle()
addItem()
removeItem()
}

class Item {
- itemStatus : boolean
- itemDescription : String
- itemDueDate : String

editDescription()
editStatus()
editDueDate()
}

class ItemController{
addItemButtonClicked()
itemDueDateSet()
itemDescriptionSet()
isCompleteSet()
}
class ListController{
addListButtonClicked()
deleteButtonClicked()
displayListButtonClicked()
}

javafx.Application <|- App
App *-- Lists
Lists <-- ToDoList
ToDoList o-- Item
Item - ItemController
Lists - ListController

@enduml